--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
     "react": "^19.2.3",
-    "@google/genai": "^1.35.0",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
-    "docx": "^9.1.0",
+    "react-dom": "^19.2.3",
+    "@google/genai": "1.3.0",
+    "jspdf": "2.5.1",
+    "html2canvas": "1.4.1",
+    "docx": "9.1.0",
     "file-saver": "2.0.5"
   },
   "devDependencies": {
